# ghost-shell

./: .taplo.toml  Cargo.toml  LICENSE.md  README.md  flake.nix  shell.nix
.config/: config.nu  nushell.nu  panache.toml  rust-toolchain.toml  starship.toml  tombi.toml
.nu/: config.nu
crates/ghost/: Cargo.toml
crates/ghost-bar/: Cargo.toml
crates/ghost-core/: Cargo.toml
crates/ghost-launcher/: Cargo.toml
crates/ghost-shell/: Cargo.toml
crates/ghost-shell-bar/: Cargo.toml
crates/ghost-shell-config/: Cargo.toml
crates/ghost-shell-config/src/: lib.rs
crates/ghost-shell-core/: Cargo.toml
crates/ghost-shell-core/src/: lib.rs
crates/ghost-shell-launcher/: Cargo.toml
crates/ghost-shell/src/: main.rs
src/: main.rs
