[workspace]
resolver = "3"
members = [
  "crates/ghost",
  "crates/ghost-bar",
  "crates/ghost-core",
  "crates/ghost-launcher",
]
default-members = ["crates/ghost"]

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/thatwhichisdev/ghost"
publish = false

[workspace.dependencies]
ghost-bar = { path = "crates/ghost-bar" }
ghost-core = { path = "crates/ghost-core" }
ghost-launcher = { path = "crates/ghost-launcher" }

gpui = {
  git = "https://github.com/zed-industries/zed",
  rev = "9902238fe0d643cf7b4b0d054425605e1808976d",
  features = [
    "wayland",
  ]
}
gpui_platform = {
  git = "https://github.com/zed-industries/zed",
  rev = "9902238fe0d643cf7b4b0d054425605e1808976d",
  features = [
    "wayland",
  ]
}
