[workspace]
resolver = "3"
members = [
  "crates/ghost-shell",
  "crates/ghost-shell-bar",
  "crates/ghost-shell-core",
  "crates/ghost-shell-launcher",
]
default-members = ["crates/ghost-shell"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
repository = "https://github.com/thatwhichisdev/ghost-shell"
publish = false

[workspace.dependencies]
ghost-shell-bar = { path = "crates/ghost-shell-bar" }
ghost-shell-core = { path = "crates/ghost-shell-core" }
ghost-shell-launcher = { path = "crates/ghost-shell-launcher" }

gpui = {
  git = "https://github.com/zed-industries/zed",
  rev = "9902238fe0d643cf7b4b0d054425605e1808976d",
  features = [
    "wayland",
  ]
}
gpui_platform = {
  git = "https://github.com/zed-industries/zed",
  rev = "9902238fe0d643cf7b4b0d054425605e1808976d",
  features = [
    "wayland",
  ]
}
