[package]
name = "ghost-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
ghost-shell-bar.workspace = true
ghost-shell-config.workspace = true
ghost-shell-core.workspace = true
ghost-shell-launcher.workspace = true

gpui.workspace = true
gpui_platform.workspace = true
